--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,8 +26,12 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.activation-1.1.1.jar=D:\\activation-1.1.1.jar
+file.reference.javax.mail-1.6.2.jar=D:\\javax.mail-1.6.2.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\thuat\\Downloads\\jaxb-api-2.1.jar
+file.reference.jaxb-api-2.1.jar-1=D:\\jaxb-api-2.1.jar
 file.reference.sqljdbc42.jar=C:\\Users\\thuat\\Downloads\\sqljdbc42.jar
+file.reference.sqljdbc42.jar-1=D:\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +42,11 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.jaxb-api-2.1.jar}
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.jaxb-api-2.1.jar-1}:\
+    ${file.reference.sqljdbc42.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
