--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.gson-2.10.1.jar=C:\\Users\\thuat\\Downloads\\gson-2.10.1.jar
 file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\thuat\\Downloads\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\thuat\\Downloads\\jakarta.mail-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\thuat\\Downloads\\jakarta.servlet.jsp.jstl-2.0.0.jar
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.jakarta.activation-2.0.1.jar}:\
     ${file.reference.jakarta.mail-2.0.1.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.gson-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
